# pyeio

./: .gitignore  404.html  Cargo.toml  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  setup.py  sitemap.xml
cli/: index.html
dependencies/: index.html
developer/: index.html
developer/todo/: index.html
docs/: advanced.md  dependencies.md  examples.md  features.md  formats.md  index.md  installation.md  model.json  ontology.md  outputs.md  quickstart.md  requirements.md  requirements.txt  sample.json  sample.toml  sample.yaml  scratchpad.md  tutorial.md  usage.ipynb
docs/developer/: todo.md
docs/format/: json.md  jsonl.md  yaml.md
docs/module/: pyeio.core.io.md  pyeio.core.web.md  pyeio.json.md  pyeio.toml.md  pyeio.yaml.md
docs/note/: features.md
docs/notebook/: json.ipynb  jsonl.ipynb
docs/notes/: old readme.md  ontology.md
docs/stylesheets/: extra.css
features/: index.html
format/json/: index.html
format/jsonl/: index.html
format/yaml/: index.html
formats/: index.html
installation/: index.html
man wc/: index.html
module/: index.html
module/pyeio.core.io/: index.html
module/pyeio.core.web/: index.html
module/pyeio.file/: index.html
module/pyeio.file.io/: index.html
module/pyeio.file.utils/: index.html
module/pyeio.file.web/: index.html
module/pyeio.json/: index.html
module/pyeio.toml/: index.html
module/pyeio.yaml/: index.html
notebook/: index.html
notebook/0.1.4/: rust_acceleration_file_line_count.ipynb
notebook/json/: index.html
notebook/jsonl/: index.html
notebook/toml/: index.html
notebook/yaml/: index.html
notebook/zst/: index.html
notes/old readme/: index.html
notes/ontology/: index.html
pyeio/: __init__.py  annotations.py  builder.py  core.py  csv.py  env.py  exceptions.py  form.py  index.py  io.py  json.py  jsonl.py  pipe.py  schema.py  toml.py  txt.py  types.py  utility.py  utils.py  yaml.py  zst.py
pyeio/.include/: ff copy.json  ff.json  ff.schema.json  format ontology.md
pyeio/archive/: zst.py
pyeio/base/: __init__.py  data.py  exceptions.py  index.py  io.py  json.py  types.py
pyeio/cli/: __init__.py
pyeio/common/: data.py  exceptions.py  io.py  types.py
pyeio/core/: check.py  exc.py  exception.py  exceptions.py  ext.py  extension.py  extensions.py  index.py  io.py  logic.py  types.py  utils.py  validate.py  validation.py  web.py
pyeio/data/: exts.py  types.py
pyeio/dev/: csv.py
pyeio/disk/: core.py
pyeio/file/: __init__.py  io.py  json.py  jsonl.py  utils.py  web.py  zst.py
pyeio/internal/: data.py  exceptions.py
pyeio/json/: __init__.py  (+1 more)
quickstart/: index.html
reference/: index.html
requirements/: index.html
search/: search_index.json
src/: count_lines_in_file.rs  lib.rs
tests/: test_imports.py  test_json.py  test_jsonl.py  test_jsonl_opt.py
tutorial/: index.html
(+26 files in other folders)
