[tool.poetry]
name = "pyeio"
version = "0.1.1"
description = "Python package for easy data input output handling."
readme = "README.md"
repository = "https://github.com/harttraveller/pyeio"
documentation = "https://harttraveller.github.io/pyeio"
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
maintainers = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
toml = { version = "^0.10.2", optional = true }
orjson = { version = "^3.10.7", optional = true }
pyyaml = { version = "^6.0.2", optional = true }
zstandard = { version = "^0.23.0", optional = true }

[tool.poetry.extras]
json = ["orjson"]
toml = ["toml"]
yaml = ["pyyaml"]
zst = ["zstandard"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
