[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeio"
version = "0.2.0"
description = "Easy data input/output utilities."
readme = "README.md"
license = "MIT"
authors = [{ name = "Hart Traveller", email = "ruling_fiction.0b@icloud.com" }]
urls = { homepage = "https://pypi.org/project/pyeio", documentation = "https://harttraveller.github.io/pyeio", repository = "https://github.com/harttraveller/pyeio" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.12.5"]
json = ["orjson>=3.11.5"]
yaml = ["pyyaml>=6.0.3"]
zst = ["zstandard>=0.25.0"]
xml = ["lxml>=6.0.2", "xmltodict>=1.0.2"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
]
